--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "chmod +x deploy.sh && deploy.sh"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.0",
